@@ -1,5 +1,6 @@
 ????? ??, 2013 - 5.0.3:
 
+Fixed bug  938: False positive on LooseCoupling for overriding methods
 Fixed bug  940: False positive on UnsynchronizedStaticDateFormatter
 Fixed bug  942: CheckResultSet False Positive and Negative
 Fixed bug  943: PreserveStackTrace false positive if a StringBuffer exists
